# Simgame

./: .gitignore  AreaBox.h  CMakeLists.txt  Main.c  README.md  SDL_SEL.h  Testing main_SDL.c
source/: SEL.c  SEL.h
source/Area/: Area.c  Area.h  Player.h  comunc.c  comunc.h
source/Area/sprites/: sprite.c  sprite.h
source/effects/: effect.c
